# insight-reader

./: .gitignore  Cargo.toml  Makefile  README.md  README2.md  RELEASE_NOTES.md  install.sh  plan.md  uninstall.sh
.cursor/rules/: test-vms.mdc
install/: common-bash.sh  extract_text_from_image.py  extract_text_from_image.swift  get_selected_text.py  grars.desktop  install-linux.sh  install-macos.sh  install-windows.ps1  uninstall-linux.sh  uninstall-macos.sh
qa-docs/: IMPROVEMENTS.md  RELEASE_QA_CHECKLIST.md
src/: app.rs  config.rs  logging.rs  main.rs  model.rs  styles.rs  update.rs  view.rs
src/cli/: mod.rs
src/flags/: lang_mapping.rs
src/providers/: audio_player.rs  mod.rs  piper.rs  polly.rs
src/system/: clipboard.rs  mod.rs  screenshot.rs  single_instance.rs  text_cleanup.rs  tray.rs
src/system/clipboard/: linux.rs  macos.rs  mod.rs  tests.rs  windows.rs
src/system/hotkey/: common.rs  macos.rs  mod.rs  stub.rs  windows.rs
src/system/screenshot/: mod.rs
src/system/screenshot/capture/: linux.rs  macos.rs  mod.rs  windows.rs
src/system/screenshot/extract/: linux.rs  macos.rs  mod.rs  windows.rs
src/system/tray/: linux.rs  macos.rs  stub.rs  windows.rs
src/ui/: mod.rs
src/ui/settings/: hotkeys.rs  mod.rs
src/voices/: aws.rs  download.rs  mod.rs
tests/: cli_tests.rs
