[package]
name = "insight-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["svg", "tokio", "image"] }
thiserror = "2.0"
rodio = "0.19"          # Audio playback
rustfft = "6.2"         # FFT for visualization
dirs = "5.0"            # Config directory paths
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.6"
aws-sdk-polly = "1.76"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
chrono = "0.4"          # For timestamp formatting in logs
reqwest = { version = "0.12", features = ["json"] }  # HTTP client for Natural Reading API
pulldown-cmark = "0.9"  # Markdown parser for stripping formatting
core-foundation = "0.9" # Core Foundation types for macOS Accessibility API
md5 = "0.7"            # MD5 checksum verification for voice downloads
