[package]
name = "insight-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["svg", "tokio", "image"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
rodio = "0.19"          # Audio playback
rustfft = "6.2"         # FFT for visualization
dirs = "5.0"            # Config directory paths
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.6"
aws-sdk-polly = "1.76"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
chrono = "0.4"          # For timestamp formatting in logs
reqwest = { version = "0.12", features = ["json"] }  # HTTP client for Natural Reading API
pulldown-cmark = "0.9"  # Markdown parser for stripping formatting
md5 = "0.7"            # MD5 checksum verification for voice downloads
arboard = { version = "3.2", features = ["wayland-data-control"] }  # Cross-platform clipboard library
open = "5.0"            # Cross-platform URL/file opening
fs2 = "0.4"             # Cross-platform file locking for single-instance enforcement
tray-icon = { version = "0.13", default-features = false }  # System tray icon support (libxdo disabled - not needed for custom menu items)
image = "0.25"         # Image decoding for tray icon
global-hotkey = "0.5"  # Global hotkey support

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9" # Core Foundation types for macOS Accessibility API
macos-accessibility-client = "0.0.1" # Accessibility permissions check
enigo = "0.2" # Keyboard simulation for Cmd+C

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"  # GTK for system tray icon support on Linux

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Media_Ocr",
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
    "Win32_System_Com",
] }
